frame training and video classification

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 .ipynb_checkpoints
 
 # User-specific stuff
+*.pyc
+.idea
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
